manifests/configurations/ingress/base/ingress.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress
  annotations:
    cert-manager.io/issuer: ingress
spec:
  gatewayClassName: ingress
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      hostname: ${local_hostname}
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: ingress-tls
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.${local_hostname}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: ingress-tls-wildcard
