manifests/configurations/ingress/base/https.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
spec:
  parentRefs:
    - name: ingress
      sectionName: http
  hostnames:
    - ${local_hostname}
    - "*.${local_hostname}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
